--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-player": "^2.10.0",
     "react-scripts": "5.0.0",
+    "react-scrollspy-nav": "^1.2.4",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
